--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Chris Markus <chris@christophermarkus.com>"]
 readme = "README.md"
-packages = [{include = "python_template", from = "src"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
