--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,23 @@
-[tool.poetry]
+[project]
 name = "python-template"
 version = "0.1.0"
 description = ""
-authors = ["Chris Markus <chris@christophermarkus.com>"]
+authors = [{ name = "Chris Markus", email = "chris@christophermarkus.com" }]
+requires-python = "~=3.12"
 readme = "README.md"
-package-mode = false
+dependencies = [
+   "fastapi-health>=0.4.0",
+   "fastapi[standard]>=0.115.6",
+   "httpx>=0.28.1",
+   "loguru>=0.7.3",
+   "pydantic>=2.10.5",
+   "pydantic-settings>=2.7.1",
+   "pytest>=8.3.4",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-pytest = "^7.4.3"
-datamodel-code-generator = "^0.22.1"
-pydantic = "^2.4.2"
-devtools = "^0.12.2"
-fastapi = "^0.104.1"
-dataclasses-json = "^0.6.1"
-uvicorn = {extras = ["standard"], version = "^0.24.0"}
-fastapi-health = "^0.4.0"
-httpx = "^0.25.1"
-loguru = "^0.7.2"
-pydantic-settings = "^2.0.3"
-
+[tool.uv]
+package = false
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
