--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = [{ name = "Chris Markus", email = "chris@christophermarkus.com" }]
 requires-python = "~=3.12"
 readme = "README.md"
 dependencies = [
-   "fastapi[standard]>=0.115.6",
-   "httpx>=0.28.1",
-   "loguru>=0.7.3",
-   "pydantic>=2.10.5",
-   "pydantic-settings>=2.7.1",
-   "pytest>=8.3.4",
+  "fastapi[standard]>=0.115.6",
+  "httpx>=0.28.1",
+  "loguru>=0.7.3",
+  "pydantic>=2.10.5",
+  "pydantic-settings>=2.7.1",
+  "sqlmodel>=0.0.22",
 ]
 
 [tool.uv]
@@ -22,4 +22,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = []
+dev = ["pytest>=8.3.4", "pytest-asyncio>=0.23.5", "pytest-anyio>=0.1.0"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+anyio_backend = "asyncio"
+asyncio_default_fixture_loop_scope = "function"
