--- a/.gitignore
+++ b/.gitignore
@@ -192,7 +192,13 @@ Temporary Items
 .apdisk
 
 ### macOS Patch ###
+# End of https://www.toptal.com/developers/gitignore/api/macos
 # iCloud generated files
 *.icloud
 
-# End of https://www.toptal.com/developers/gitignore/api/macos
+# SQLite database files
+*.db
+*.sqlite
+*.sqlite3
+*.sqlite-journal
+*.sqlite3-journal
