--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [{ name = "Chris Markus", email = "chris@christophermarkus.com" }]
 requires-python = "~=3.12"
 readme = "README.md"
 dependencies = [
+  "dynaconf>=3.2.7",
   "fastapi[standard]>=0.115.6",
   "httpx>=0.28.1",
   "loguru>=0.7.3",
@@ -22,7 +23,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["pytest>=8.3.4", "pytest-asyncio>=0.23.5", "pytest-anyio>=0.1.0"]
+dev = [
+    "pytest>=8.3.4",
+]
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
