--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "python.testing.pytestArgs": [
-        "tests"
+        "app"
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true,
