--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = [
-    "pytest>=8.3.4",
-]
-
-[tool.pytest.ini_options]
-asyncio_mode = "auto"
-anyio_backend = "asyncio"
-asyncio_default_fixture_loop_scope = "function"
+dev = ["pytest>=8.3.4"]
