--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,12 +2,12 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.22.9
+  version: 1.22.10
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.6.6
+      ref: v1.6.7
       uri: https://github.com/trunk-io/plugins
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
@@ -20,11 +20,16 @@ lint:
     - git-diff-check
     - bandit
   enabled:
-    - black@24.10.0
-    - checkov@3.2.357
-    - isort@5.13.2
-    - markdownlint@0.43.0
+    - osv-scanner@1.9.2
+    - yamllint@1.35.1
+    - black@25.1.0
+    - checkov@3.2.367
+    - isort@6.0.0
+    - markdownlint@0.44.0
     - prettier@3.4.2
-    - ruff@0.9.3
+    - ruff@0.9.4
     - taplo@0.9.3
-    - trufflehog@3.88.2
+    - trufflehog@3.88.5
+actions:
+  enabled:
+    - trunk-upgrade-available
