--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,14 @@ requires-python = "~=3.12"
 readme = "README.md"
 dependencies = [
   "atlas-provider-sqlalchemy>=0.2.4",
-  "dependency-injector>=4.45.0",
-  "dynaconf>=3.2.7",
   "fastapi[standard]>=0.115.6",
   "httpx>=0.28.1",
   "loguru>=0.7.3",
   "pydantic>=2.10.5",
   "pydantic-settings>=2.7.1",
   "sqlmodel>=0.0.22",
+  "psycopg[binary]>=3.1.18",
+  "python-dotenv>=1.0.1",
 ]
 
 [tool.uv]
@@ -25,4 +25,6 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [dependency-groups]
-dev = ["pytest>=8.3.4"]
+dev = [
+    "pytest>=8.3.4",
+]
