--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,16 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_PORT=${POSTGRES_PORT}
+      - APP_DATABASE_SCHEMA=${APP_DATABASE_SCHEMA}
     ports:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      # - ./init-schema.sh:/docker-entrypoint-initdb.d/init-schema.sh
     healthcheck:
       test:
-        ["CMD-SHELL", "pg_isready -U ${POSTGRES_SUPER_USER} -d ${POSTGRES_DB}"]
+        - CMD-SHELL
+        - pg_isready -U ${POSTGRES_SUPER_USER} -d ${POSTGRES_DB}
       interval: 10s
       timeout: 5s
       retries: 5
