feat(config): add dynamic database_url property with current password and connection params parsing

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Application Settings
 APP_PROJECT_NAME=python-template
 # sqlite:// will silently swallow exceptions, better not to use for in-memory database
-# APP_DATABASE_URL=sqlite:// 
+# APP_DATABASE_URL_TEMPLATE=sqlite:// 
 # sqlite:///:memory: follows normal exception handling rules
-APP_DATABASE_URL=sqlite:///:memory:
-# APP_DATABASE_URL=sqlite:///./issues.db
-# APP_DATABASE_URL=postgresql+psycopg://app_user:change_this_password@localhost:5432/app_database
+# APP_DATABASE_URL_TEMPLATE=sqlite:///:memory:
+# APP_DATABASE_URL_TEMPLATE=sqlite:///./issues.db
+APP_DATABASE_URL_TEMPLATE=postgresql+psycopg://app_user:change_this_password@localhost:5432/app_database
 APP_DATABASE_SCHEMA=issue_analysis
 APP_MIGRATE_DATABASE=false
 APP_SQLITE_WAL_MODE=false
