--- a/.env.example
+++ b/.env.example
@@ -5,19 +5,15 @@ APP_PROJECT_NAME=python-template
 # sqlite:///:memory: follows normal exception handling rules
 # APP_DATABASE_URL_TEMPLATE=sqlite:///:memory:
 # APP_DATABASE_URL_TEMPLATE=sqlite:///./issues.db
-APP_DATABASE_URL_TEMPLATE=postgresql+psycopg://app_user:change_this_password@localhost:5432/app_database
+# APP_DATABASE_URL_TEMPLATE=postgresql+psycopg://app_user:change_this_password@localhost:5432/app_database
+# Or, for an async driver using asyncpg:
+APP_DATABASE_URL_TEMPLATE=postgresql+asyncpg://app_user:change_this_password@localhost:5432/app_database
 APP_DATABASE_SCHEMA=issue_analysis
-APP_MIGRATE_DATABASE=false
+APP_CREATE_TABLES=true
 APP_SQLITE_WAL_MODE=false
-# collection, sqlmodel
-APP_DATABASE_TYPE=sqlmodel
 
-# PostgreSQL Configuration (for reference)
-POSTGRES_SUPER_USER=app_user
-POSTGRES_SUPER_PASSWORD=change_this_password
-POSTGRES_DB=app_database
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+# APP_CURRENT_ENV can be 'default' or 'testing'
+APP_CURRENT_ENV=default
 
 # CORS Settings
 APP_BACKEND_CORS_ORIGINS=["http://localhost:8000","http://localhost:3000"]
