--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,11 @@ dependencies = [
   "pydantic>=2.10.5",
   "pydantic-settings>=2.7.1",
   "sqlmodel>=0.0.22",
+  "aiosqlite>=0.18.0",
+  "asyncpg>=0.27.0",
   "psycopg[binary]>=3.1.18",
   "python-dotenv>=1.0.1",
+  "greenlet>=3.1.1",
 ]
 
 [tool.uv]
